--- a/cfg/cfgogl/tailred/stripper/maps/c10m3_ranchhouse.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c10m3_ranchhouse.cfg
@@ -64,11 +64,6 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -519,10 +514,16 @@ add:
 {
 	"classname" "prop_dynamic"
 	"origin" "-11356 -4460 -57"
-	"angles" "0 3 0"
+	"angles" "0 0 0"
 	"model" "models/props_vehicles/bus01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "lightingfix_bus"
+}
+{
+	"classname" "info_target"
+	"origin" "-10982 -4443 13"
+	"targetname" "lightingfix_bus"
 }
 ; --- Block LOS under bus
 {
@@ -583,8 +584,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -626,9 +627,9 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clip above Hersch building
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
 	; --- Clip above building in trainyard, replace with our own
-	"OnMapSpawn" "anv_mapfixes_commonhop_traintoroof,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_commonhop_traintoroof,Kill,,30,-1"
 }
 
 ; =====================================================
