--- a/cfg/cfgogl/tailred/stripper/maps/c11m1_greenhouse.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c11m1_greenhouse.cfg
@@ -26,8 +26,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Allow the chrome and silenced SMG to spawn in the saferoom
 modify:
@@ -63,11 +63,6 @@ modify:
 		"spawn_without_director" "1"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 add:
 ; --- Melee weapon spawn in the apartment after the one way drop
 {
@@ -207,6 +202,24 @@ add:
 	"origin" "4880 552 1200"
 	"mins" "-112 -152 -528"
 	"maxs" "112 152 528"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from getting punched onto the AC unit by the ladder
+{
+	"classname" "env_physics_blocker"
+	"origin" "3295 600 1280"
+	"mins" "-29 -60 -448"
+	"maxs" "29 60 448"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from standing on a ledge by the one way drop
+{
+	"classname" "env_physics_blocker"
+	"origin" "3108 1404 811"
+	"mins" "-284 -4 -245"
+	"maxs" "284 4 245"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -447,8 +460,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -479,21 +492,21 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips on the greenhouse roof
-	"OnMapSpawn" "anv_mapfixes_greenhouse_saferoof_infected,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_greenhouse_saferoof_infecgap,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdrawgreenhouse_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdrawgreenhouse_wrongwayb,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_greenhouse_saferoof_infected,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_greenhouse_saferoof_infecgap,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdrawgreenhouse_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdrawgreenhouse_wrongwayb,Kill,,30,-1"
 	; --- Clips on the water tower roof
-	"OnMapSpawn" "anv_mapfixes_bustedwatertower_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_bustedwatertower_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_bustedwatertower_wrongwayb,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_bustedwatertower_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_bustedwatertower_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_bustedwatertower_wrongwayb,Kill,,30,-1"
 	; --- Clip on ladder by one way drop - REPLACED
-	"OnMapSpawn" "anv_mapfixes_ladderqol_electricalbox,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_ladderqol_electricalbox,Kill,,30,-1"
 	; --- Clips on roof near end saferoom
-	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_stuck,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_wrongwayb,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_stuck,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_wrongwayb,Kill,,30,-1"
 }
 
 ; =====================================================
