--- a/cfg/cfgogl/tailred/stripper/maps/c11m4_terminal.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c11m4_terminal.cfg
@@ -70,11 +70,6 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -539,8 +534,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -629,7 +624,7 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Auto crouch trigger on van event fence - REPLACED
-	"OnMapSpawn" "anv_mapfixes_duckqol_vanfence,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_duckqol_vanfence,Kill,,30,-1"
 }
 
 ; =====================================================
