--- a/cfg/cfgogl/tailred/stripper/maps/c11m5_runway.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c11m5_runway.cfg
@@ -26,11 +26,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -354,8 +349,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -412,7 +407,7 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Angled survivor clip over boarding gate (can be re-enabled if angled blockers get fixed) (#34)
-	"OnMapSpawn" "anv_mapfixes_nav_skybridge,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_nav_skybridge,Kill,,30,-1"
 }
 
 ; =====================================================
