--- a/cfg/cfgogl/tailred/stripper/maps/c1m2_streets.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c1m2_streets.cfg
@@ -144,11 +144,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -1131,39 +1126,47 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Van by the end saferoom
+; --- Bus by the end saferoom
 {
 	"classname" "prop_dynamic"
-	"origin" "-7660 -3913 384"
-	"angles" "0 235 0"
-	"model" "models/props_vehicles/van.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-7660 -3913 384"
-	"angles" "0 235 0"
-	"model" "models/props_vehicles/van_glass.mdl"
+	"origin" "-7718 -4120 384"
+	"angles" "0 293.5 0"
+	"model" "models/props_vehicles/bus01_2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 ; --- Block LOS under van
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "losfix_extra_van,AddOutput,mins -66 -1 -12,0,-1"
-	"OnMapSpawn" "losfix_extra_van,AddOutput,maxs 66 1 12,0,-1"
-	"OnMapSpawn" "losfix_extra_van,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_a,AddOutput,mins -1 -95 -10,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_a,AddOutput,maxs 1 95 10,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_b,AddOutput,mins -48 -1 -10,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_b,AddOutput,maxs 48 1 10,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_c,AddOutput,mins -1 -114 -10,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_c,AddOutput,maxs 1 114 10,0,-1"
+	"OnMapSpawn" "losfix_bus_endsaferoom_c,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
-	"origin" "-7652 -3918 394"
-	"targetname" "losfix_extra_van"
+	"origin" "-7658 -4249 392"
+	"targetname" "losfix_bus_endsaferoom_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-7705 -4153 392"
+	"targetname" "losfix_bus_endsaferoom_b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-7752 -4038 392"
+	"targetname" "losfix_bus_endsaferoom_c"
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1202,22 +1205,22 @@ add:
 {
 	"classname" "logic_auto"
 	; --- At the left end of the street by the starting saferoom
-	"OnMapSpawn" "anv_mapfixes_yeswaycorner_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswaycorner_wrongway,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaycorner_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaycorner_wrongway,Kill,,30,-1"
 	; --- At the back of the underpass street by the white van
-	"OnMapSpawn" "anv_mapfixes_clipgap_deadendfence,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_clipgap_deadendfence,Kill,,30,-1"
 	; --- Area above the underpass, by the billboard and bridge
-	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_clipa,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_clipb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_wrongwayb,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_clipa,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_clipb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_wrongwayb,Kill,,30,-1"
 	; --- Roof above the CEDA van drop
-	"OnMapSpawn" "anv_mapfixes_yeswaychoke_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwayb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwayc,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwayb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwayc,Kill,,30,-1"
 	; ---- On the roof right of the end saferoom
-	"OnMapSpawn" "anv_mapfixes_sneaky_hunter,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_sneaky_hunter,Kill,,30,-1"
 }
 
 ; =====================================================
