--- a/cfg/cfgogl/tailred/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c1m4_atrium.cfg
@@ -83,14 +83,34 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+add:
+; --- Crowbar before the elevator
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "-3052 -4252 -538"
+	"angles" "0 90 -90"
+	"melee_weapon" "crowbar"
+	"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
+}
+; --- Melee weapon by the information stand
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "-4357 -3882 37"
+	"angles" "0 330 90"
+	"melee_weapon" "any"
+	"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
@@ -479,9 +499,46 @@ add:
 ; =====================================================
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
+; --- Add a railing elevator so survivors can stand on it
+add:
+{
+	"classname" "prop_dynamic"
+	"origin" "-4065 -3404 573"
+	"angles" "0 0 0"
+	"model" "models/props_urban/elevator_rail001.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4065 -3311 574"
+	"mins" "-71 -3 -1"
+	"maxs" "71 3 1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"parentname" "elevator"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4065 -3497 574"
+	"mins" "-71 -3 -1"
+	"maxs" "71 3 1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"parentname" "elevator"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4133 -3404 574"
+	"mins" "-3 -90 -1"
+	"maxs" "3 90 1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"parentname" "elevator"
+}
 
 
 ; ############  MAP SOUND AND GFX CHANGES  ############
