--- a/cfg/cfgogl/tailred/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c2m2_fairgrounds.cfg
@@ -42,11 +42,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -121,7 +116,7 @@ modify:
 		"angles" "0 0 0"
 	}
 }
-; --- Tweak the position of the forklift at the start
+; --- Adjust the position of the forklift at the start
 {
 	match:
 	{
@@ -145,30 +140,7 @@ add:
 	"fadescale" "0"
 	"spawnflags" "256"
 }
-; --- Replace model of TLS 2009 forklift
-{
-	"classname" "logic_auto"
-	; --- Remove TLS forklift
-	"OnMapSpawn" "anv_mapfixes_hittable_2009forklift,Kill,,15,-1"
-	; --- Spawn new forklift
-	"OnMapSpawn" "forklift_2009_replacement_template,ForceSpawn,,16,-1"
-}
-{
-	"classname" "prop_physics_override"
-	"origin" "-3666 -1321 -111"
-	"angles" "0 135 0"
-	"model" "models/props\cs_assault\forklift_brokenlift.mdl"
-	"solid" "6"
-	"targetname" "forklift_2009_replacement"
-	"fadescale" "0"
-}
-; --- Template to spawn the forklift
-{
-	"classname" "point_template"
-	"targetname" "forklift_2009_replacement_template"
-	"Template01" "forklift_2009_replacement"
-	"spawnflags" "2"
-}
+
 
 ; #############  MAP CLIPPING AND ISSUES  #############
 ; =====================================================
@@ -773,15 +745,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block getting on the left platform at the one way drop
-{
-	"classname" "env_physics_blocker"
-	"origin" "-1916 -4160 392"
-	"mins" "-132 -320 -376"
-	"maxs" "132 320 376"
-	"initialstate" "1"
-	"BlockType" "1"
-}
+; --- Block getting on the left platform at the one way drop - Removed while "Carousel Room" is open
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "-1916 -4160 392"
+;	"mins" "-132 -320 -376"
+;	"maxs" "132 320 376"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
 ; --- Block jumping on the light post to common jump back up the one way drop
 {
 	"classname" "env_physics_blocker"
@@ -1342,7 +1314,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Props to help with LOSing before the carousel
+; --- Fence under platforms before the carousel
 {
 	"classname" "prop_dynamic"
 	"origin" "-1855 -4478 -121"
@@ -1359,14 +1331,15 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-{
-	"classname" "prop_dynamic"
-	"origin" "-2527 -3918 -124"
-	"angles" "0 90 0"
-	"model" "models/props_office/vending_machine01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
+; --- Vending machine under platforms before the carousel - Removed due to "Carousel Room" being open
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-2527 -3918 -124"
+;	"angles" "0 90 0"
+;	"model" "models/props_office/vending_machine01.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
 ; --- Hedge by the stairs leading to the end saferoom
 {
 	"classname" "prop_dynamic"
@@ -1450,6 +1423,24 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Tent by the end saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "-3393 -5378 -64"
+	"angles" "0 0 0"
+	"model" "models/props_misc/fairground_tent_closed.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendercolor" "211 124 109"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3393 -5378 420"
+	"mins" "-64 -64 -348"
+	"maxs" "64 64 348"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Porta potties by the end saferoom
 {
 	"classname" "prop_dynamic"
@@ -1513,8 +1504,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 add:
 ; --- Clone another rooftop to block most of the roof behind the ladder to prevent unavoidable booms
@@ -1615,10 +1606,10 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clip in area behind kiddyland
-	"OnMapSpawn" "anv_mapfixes_yeswayfairback_funcinfclip,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfairback_funcinfclip,Kill,,30,-1"
 	; --- Clip on end saferoom roof
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
 }
 
 ; =====================================================
@@ -2462,6 +2453,178 @@ add:
 	"classname" "weapon_pain_pills_spawn"
 	"origin" "1341 -74 42"
 	"angles" "0 0 0"
+}
+
+; =====================================================
+; ==                  CAROUSEL ROOM                  ==
+; ==    Opens a room by the carousel for survivors   ==
+; =====================================================
+; --- Remove board and clip to open room
+filter:
+{
+	"hammerid" "594442"
+}
+{
+	"targetname" "courtyard_bldg2_clip"
+}
+{
+	"targetname" "courtyard_bldg2_blocker"
+}
+{
+	"targetname" "courtyard_bldg2_tankwall"
+}
+; --- Ladder to climb up to platform
+add:
+{
+	"classname" "func_simpleladder"
+	"origin" "-6200 -2441 -44"
+	"angles" "0 90 0"
+	"model" "*63"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "0"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1855 -4486 -42"
+	"angles" "-5 270 0"
+	"model" "models/props/de_train/ladderaluminium.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Warehouse shelves in the room
+{
+	"classname" "prop_dynamic"
+	"origin" "-1430 -3846 32"
+	"angles" "0 270 0"
+	"model" "models/props_industrial/warehouse_shelf004.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1510 -3875 112"
+	"mins" "-80 -35 -80"
+	"maxs" "80 35 80"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1834 -4129 32"
+	"angles" "0 180 0"
+	"model" "models/props_industrial/warehouse_shelf001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1868 -4049 112"
+	"mins" "-35 -80 -80"
+	"maxs" "35 80 80"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Vending machine
+{
+	"classname" "prop_dynamic"
+	"origin" "-1581 -4334 54"
+	"angles" "-90 263.5 0"
+	"model" "models/props_office/vending_machine01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Electrical boxes
+{
+	"classname" "prop_dynamic"
+	"origin" "-1410 -4203.7 32"
+	"angles" "0 90 0"
+	"model" "models/props_fairgrounds/fairgrounds_electric_box001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1152 -4022 32"
+	"angles" "0 180 0"
+	"model" "models/props/de_nuke/electricalbox01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1156 -4037.5 112"
+	"mins" "-4 -112.5 -80"
+	"maxs" "4 112.5 80"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Junk on the floor
+{
+	"classname" "prop_dynamic"
+	"origin" "-1270 -4127 32"
+	"angles" "0 0 0"
+	"model" "models/effects/urban_puddle_model02a.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1516 -3912 32"
+	"angles" "0 195 0"
+	"model" "models/effects/urban_puddle_model03a.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1768 -3990 32"
+	"angles" "0 345 0"
+	"model" "models/props_junk/food_pile01.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Lighting
+{
+	"classname" "prop_dynamic"
+	"origin" "-1664 -4032 172"
+	"angles" "0 90 0"
+	"model" "models/props_lighting/light_shop.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "light_dynamic"
+	"origin" "-1664 -4032 146"
+	"angles" "0 0 0"
+	"_cone" "0"
+	"_inner_cone" "0"
+	"style" "0"
+	"_light" "238 207 162 10"
+	"brightness" "0.4"
+	"distance" "512"
+	"spawnflags" "0"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1344 -4032 172"
+	"angles" "0 90 0"
+	"model" "models/props_lighting/light_shop.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "light_dynamic"
+	"origin" "-1344 -4032 146"
+	"angles" "0 0 0"
+	"_cone" "0"
+	"_inner_cone" "0"
+	"style" "0"
+	"_light" "238 207 162 10"
+	"brightness" "0.4"
+	"distance" "512"
+	"spawnflags" "0"
 }
 
 ; =====================================================
