--- a/cfg/cfgogl/tailred/stripper/maps/c2m5_concert.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c2m5_concert.cfg
@@ -43,8 +43,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Ensure each gun type is in the saferoom
 modify:
@@ -66,14 +66,8 @@ modify:
 	replace:
 	{
 		"weapon_selection" "tier1_shotgun"
-		
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
@@ -89,7 +83,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
-	"count" "5"
 }
 
 ; =====================================================
@@ -339,8 +332,8 @@ add:
 ; --- Fences to make getting hittables inside the saferoom area harder
 {
 	"classname" "prop_dynamic"
-	"origin" "-3834 2883 -256"
-	"angles" "0 262.5 0"
+	"origin" "-3786 2955 -256"
+	"angles" "0 258 0"
 	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -349,8 +342,8 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "-3965 2886 -256"
-	"angles" "0 274 0"
+	"origin" "-3995 2900 -256"
+	"angles" "0 291 0"
 	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -436,8 +429,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -493,13 +486,13 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Remove axis warp and clip under the seating area
-	"OnMapSpawn" "anv_mapfixes_axiswarp_anvilcase_trigmult,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_axiswarp_anvilcase_clip,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_anvilcase_trigmult,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_anvilcase_clip,Kill,,30,-1"
 	; --- Remove axis warps and clips by fire escapes
-	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop1_trigmult,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop1_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop2_trigmult,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop2_clip,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop1_trigmult,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop1_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop2_trigmult,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop2_clip,Kill,,30,-1"
 }
 
 ; =====================================================
