--- a/cfg/cfgogl/tailred/stripper/maps/c4m4_milltown_b.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c4m4_milltown_b.cfg
@@ -102,11 +102,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -114,10 +109,6 @@ modify:
 filter:
 {
 	"classname" "prop_health_cabinet"
-}
-; --- Remove HR in treehouse
-{
-	"hammerid" "1751441"
 }
 ; --- Make guns in house by sugarmill saferoom always spawn both T1 types
 modify:
@@ -681,6 +672,18 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Block LOS under fence by the ladder before the playground
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,mins -192 -1 -3,0,-1"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,maxs 192 1 3,0,-1"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-3104 7385 98"
+	"targetname" "losfix_ladder_fence"
+}
 ; --- Clipping on balcony railing by the playground
 {
 	"classname" "env_physics_blocker"
@@ -1031,7 +1034,7 @@ add:
 	"origin" "3395 -856 110"
 	"targetname" "losfix_blue_pickup_b"
 }
-; --- Boxes in the boat garage by the sugarmill saferoom
+; --- Washer boxes at house by the sugarmill saferoom
 {
 	"classname" "prop_dynamic"
 	"origin" "3858 -810 97"
@@ -1042,16 +1045,16 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3858 -767 97"
-	"angles" "1 270 -2"
+	"origin" "3550 -471 96"
+	"angles" "0 270 0"
 	"model" "models/props/cs_assault/washer_box.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1100,13 +1103,13 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Replace blocker on fence by garage sale
-	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,30,-1"
 }
 ; --- Remove Valve's commentary blockers so we can replace them with our own
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 ; --- Re-add Valve's blockers copied directly from c4m4_milltown_b_commentary.txt, excluding the ones we don't want
 ; --- Block players standing on shrubs around the edge of the map - CHANGED, now only blocks survivors
@@ -1418,6 +1421,39 @@ add:
 	"model" "models/props_vehicles/suv_2001_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-937 6123 156"
+	"angles" "0 -14 0"
+	"mins" "-12 -33 -5"
+	"maxs" "12 33 5"
+	"boxmins" "-12 -33 -5"
+	"boxmaxs" "12 33 5"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-929 6121 166"
+	"angles" "0 -14 0"
+	"mins" "-12 -31 -5"
+	"maxs" "12 31 5"
+	"boxmins" "-12 -31 -5"
+	"boxmaxs" "12 31 5"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-916 6118 174"
+	"angles" "0 -14 0"
+	"mins" "-12 -29 -3"
+	"maxs" "12 29 3"
+	"boxmins" "-12 -29 -3"
+	"boxmaxs" "12 29 3"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 ; --- Block the door between the 2 new fences
 {
