--- a/cfg/cfgogl/tailred/stripper/maps/c4m5_milltown_escape.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c4m5_milltown_escape.cfg
@@ -48,67 +48,6 @@ add:
 	"classname" "logic_auto"
 	"OnMapSpawn" "@director,RunScriptFile,nav_fixes/c4m5_milltown_escape_navfixes,20,-1"
 }
-; --- Spawn tank once survivors reach the one way drop fence
-; --- Create a trigger for spawning tank
-add:
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "pre_event_tank_trigger,AddOutput,mins -20 -132 -720,0,-1"
-	"OnMapSpawn" "pre_event_tank_trigger,AddOutput,maxs 20 132 720,0,-1"
-	"OnMapSpawn" "pre_event_tank_trigger,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "tank_teleport_trigger,AddOutput,mins -100 -148 -128,0,-1"
-	"OnMapSpawn" "tank_teleport_trigger,AddOutput,maxs 100 148 128,0,-1"
-	"OnMapSpawn" "tank_teleport_trigger,AddOutput,boxmins -100 -148 -128,0,-1"
-	"OnMapSpawn" "tank_teleport_trigger,AddOutput,boxmaxs 100 148 128,0,-1"
-	"OnMapSpawn" "tank_teleport_trigger,AddOutput,solid 2,0,-1"
-}
-{
-	"classname" "trigger_once"
-	"origin" "-4077 7138 816"
-	"targetname" "pre_event_tank_trigger"
-	"filtername" "filter_survivor"
-	"spawnflags" "1"
-	"OnTrigger" "pre_event_tank,SpawnZombie,,0,1"
-	"OnTrigger" "tank_teleport_trigger,Enable,,0,-1"
-	"OnTrigger" "tank_death_blocker,Enable,,0,-1"
-	"OnTrigger" "tank_death_blocker,Kill,,15,-1"
-}
-{
-	"classname" "info_zombie_spawn"
-	"origin" "-7010 7701 112"
-	"angles" "0 0 0"
-	"population" "tank"
-	"offer_tank" "1"
-	"targetname" "pre_event_tank"
-}
-; --- Fix tank spawn direction
-{
-	"classname" "trigger_teleport"
-	"origin" "-7028 7700 208"
-	"targetname" "tank_teleport_trigger"
-	"filtername" "filter_infected"
-	"spawnflags" "1"
-	"StartDisabled" "1"
-	"target" "tank_spawn_position"
-	"OnStartTouch" "tank_teleport_trigger,Kill,,0,-1"
-}
-{
-	"classname" "info_teleport_destination"
-	"origin" "-7010 7701 112"
-	"angles" "0 0 0"
-	"targetname" "tank_spawn_position"
-}
-; --- Prevent accidental suiciding
-{
-	"classname" "env_physics_blocker"
-	"origin" "-7316 7976 322"
-	"mins" "-140 -2264 -252"
-	"maxs" "140 2264 252"
-	"initialstate" "1"
-	"BlockType" "2"
-	"initialstate" "0"
-	"targetname" "tank_death_blocker"
-}
 ; --- Force all alarm cars to be active
 modify:
 ; --- Alarm by burger tank
@@ -170,9 +109,10 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+add:
 ; --- Single magnum spawn before diner
 {
 	"classname" "weapon_pistol_magnum"
@@ -202,11 +142,6 @@ modify:
 		"weapon_selection" "weapon_shotgun_chrome"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 ; --- Remove health cabinets
 filter:
 {
@@ -341,8 +276,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -391,9 +326,9 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Replace broken blocker on generator by burger tank causing physics issues
-	"OnMapSpawn" "anv_mapfixes_booster_ginnyjon,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_booster_ginnyjon,Kill,,30,-1"
 	; --- Angled clip on top of generator (can be re-enabled if angled blockers get fixed) (#34), replaced with existing Valve commentary blocker
-	"OnMapSpawn" "anv_mapfixes_booster_ginnytop,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_booster_ginnytop,Kill,,30,-1"
 }
 ; --- Replacement for anv_mapfixes_booster_ginnyjon
 {
@@ -411,7 +346,7 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 ; --- Re-add Valve's blockers copied directly from c4m5_milltown_escape_commentary.txt, excluding the ones we don't want
 ; --- Block jesus spot on table in the burger tank - REMOVED, nav fixes vscript fixes jesus spot here, so no need to replace this
