--- a/cfg/cfgogl/tailred/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c6m2_bedlam.cfg
@@ -43,6 +43,18 @@ modify:
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+; --- Allow Midnight Riders bus event to happen in versus
+;modify:
+;{
+;	match:
+;	{
+;		"hammerid" "556544"
+;	}
+;	insert:
+;	{
+;		"OnVersusPostIO" "trigger_busEnable0-1"
+;	}
+;}
 ; --- Add obscured (blue) nav area around the edge of the room where survivors drop into the sewer, so SI and horde can spawn
 add:
 {
@@ -232,11 +244,6 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -323,7 +330,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
-	"count" "5"
 }
 ; --- Ammo pile in the jazz club
 {
@@ -334,7 +340,16 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
-	"count" "5"
+}
+; --- Ammo pile before the one way drop
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "789 4947 -344"
+	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
 }
 ; --- Adjusted position of floating ammo pile by the event
 modify:
@@ -447,6 +462,62 @@ add:
 	"maxs" "71.5 319 94"
 	"initialstate" "1"
 	"BlockType" "0"
+}
+; --- Prevent players from blocking the gates in the sewers
+{
+	"classname" "env_physics_blocker"
+	"origin" "2545 5702 -992"
+	"angles" "0 1 0"
+	"mins" "-4 -44 -72"
+	"maxs" "4 44 72"
+	"boxmins" "-4 -44 -72"
+	"boxmaxs" "4 44 72"
+	"initialstate" "1"
+	"BlockType" "0"
+	"targetname" "player_gate_blocker1"
+	"parentname" "minifinale_gate1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "5186 5445 -992"
+	"angles" "0 1 0"
+	"mins" "-4 -44 -72"
+	"maxs" "4 44 72"
+	"boxmins" "-4 -44 -72"
+	"boxmaxs" "4 44 72"
+	"initialstate" "1"
+	"BlockType" "0"
+	"targetname" "player_gate_blocker2"
+	"parentname" "minifinale_gate2"
+}
+modify:
+{
+	match:
+	{
+		"targetname" "minifinale_gate1"
+	}
+	insert:
+	{
+		"OnFullyOpen" "player_gate_blocker1,Kill,,0,-1"
+	}
+	replace:
+	{
+		"spawnflags" "6"
+	}
+}
+{
+	match:
+	{
+		"targetname" "minifinale_gate2"
+	}
+	insert:
+	{
+		"OnFullyOpen" "player_gate_blocker2,Kill,,0,-1"
+	}
+	replace:
+	{
+		"spawnflags" "6"
+	}
 }
 
 ; =====================================================
@@ -876,8 +947,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
