--- a/cfg/cfgogl/tailred/stripper/maps/c8m2_subway.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c8m2_subway.cfg
@@ -22,11 +22,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -378,8 +373,8 @@ add:
 
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -427,12 +422,12 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips in generator room windows area
-	"OnMapSpawn" "anv_mapfixes_ladder_generatorwindow_clipa,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_ladder_generatorwindow_clipb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_ladder_generatorwindow_clipc,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_wrongwayb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_wrongwayc,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_ladder_generatorwindow_clipa,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_ladder_generatorwindow_clipb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_ladder_generatorwindow_clipc,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_wrongwayb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_wrongwayc,Kill,,30,-1"
 }
 
 ; =====================================================
