--- a/cfg/cfgogl/tailred/stripper/maps/c8m3_sewers.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c8m3_sewers.cfg
@@ -87,11 +87,6 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -365,8 +360,8 @@ add:
 ; =====================================================
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 add:
 ; --- Pipe to stand on at the ladder choke
@@ -569,30 +564,30 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips behind the burger tank
-	"OnMapSpawn" "anv_mapfixes_burgerfence_blocker1,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_burgerfence_blocker2,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_burgerfence_blocker3,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_burgerfence_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_burgerfence_wrongwayb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_burgerfence_wrongwayc,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_ladder_burgerfenceshared_clip,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_burgerfence_blocker1,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_burgerfence_blocker2,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_burgerfence_blocker3,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_burgerfence_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_burgerfence_wrongwayb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_burgerfence_wrongwayc,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_ladder_burgerfenceshared_clip,Kill,,30,-1"
 	; --- Above the waterworks building
-	"OnMapSpawn" "anv_mapfixes_waterworks_collision,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_waterworks_blocker,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwayb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwayc,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwayd,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwaye,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_waterworks_collision,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_waterworks_blocker,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwayb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwayc,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwayd,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_waterworks_wrongwaye,Kill,,30,-1"
 	; --- After the sewer
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,30,-1"
 }
 ; --- Remove Valve's commentary blockers so we can replace them with our own
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 ; --- Re-add Valve's blockers copied directly from c8m3_sewers_commentary.txt, excluding the ones we don't want
 ; --- Blocks survivors from leaving the map if tank-punched on top of the gas station - REMOVED, also blocked infected
