--- a/cfg/cfgogl/tailred/stripper/maps/c8m4_interior.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c8m4_interior.cfg
@@ -22,11 +22,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -149,8 +144,8 @@ modify:
 ; =====================================================
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
