--- a/cfg/cfgogl/tailred/stripper/maps/c10m1_caves.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c10m1_caves.cfg
@@ -27,11 +27,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -794,8 +789,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -821,15 +816,15 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips above the tunnel entrance
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_bridgetunnel_wrongway,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_clip1,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_clip2,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_rocks1,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_rocks2,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_bridgetunnel_wrongway,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_clip1,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_clip2,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_rocks1,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdrawcliff_rocks2,Kill,,30,-1"
 }
 
 ; =====================================================
