--- a/cfg/cfgogl/tailred/stripper/maps/c10m2_drainage.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c10m2_drainage.cfg
@@ -26,11 +26,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -232,8 +227,8 @@ filter:
 ; =====================================================
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -272,9 +267,9 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips on the surf pipes in the tunnel
-	"OnMapSpawn" "anv_mapfixes_smoother_pipes1,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_smoother_pipes2,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_smoother_pipes3,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_smoother_pipes1,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_smoother_pipes2,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_smoother_pipes3,Kill,,30,-1"
 }
 ; --- Prevent infected clips on the bridge from being removed
 {
