--- a/cfg/cfgogl/tailred/stripper/maps/c10m5_houseboat.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c10m5_houseboat.cfg
@@ -22,11 +22,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -482,8 +477,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -509,14 +504,14 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Remove the added large rock by the docks - Replaced with our own
-	"OnMapSpawn" "anv_mapfixes_rock_rene,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_rock_nav,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_rock_navblock_outabounds,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_rock_navblock_underneath,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_rock_infected_clipqol,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_rock_survivor_clipleft,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_rock_survivor_clipright,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_rock_survivor_clipwedge,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_rene,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_nav,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_navblock_outabounds,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_navblock_underneath,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_infected_clipqol,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_survivor_clipleft,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_survivor_clipright,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_rock_survivor_clipwedge,Kill,,30,-1"
 }
 
 ; =====================================================
