--- a/cfg/cfgogl/tailred/stripper/maps/c11m2_offices.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c11m2_offices.cfg
@@ -22,8 +22,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Allow the chrome and silenced SMG to spawn in the saferoom
 modify:
@@ -59,11 +59,6 @@ modify:
 		"spawn_without_director" "1"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 ; --- Make the gun in the apartment before the event always spawn
 modify:
 {
@@ -365,8 +360,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -405,16 +400,16 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clip on roof behind the crane
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
 	; --- Clip on roof above the offices
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_officefoyer_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_officefoyer_wrongwayb,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_officefoyer_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_officefoyer_wrongwayb,Kill,,30,-1"
 	; --- Remove ladder to get on roof above offices - REPLACED
-	"OnMapSpawn" "anv_mapfixes_ladder_officefoyerB_cloned_firebarrelfence,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_ladder_officefoyerT_cloned_undercranepipe,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_ladder_officefoyerB_cloned_firebarrelfence,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_ladder_officefoyerT_cloned_undercranepipe,Kill,,30,-1"
 	; --- Clip on roof by the end saferoom
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
 }
 
 ; =====================================================
