--- a/cfg/cfgogl/tailred/stripper/maps/c11m3_garage.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c11m3_garage.cfg
@@ -26,8 +26,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Allow the chrome and silenced SMG to spawn in the saferoom
 modify:
@@ -63,11 +63,6 @@ modify:
 		"spawn_without_director" "1"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 ; --- Shotgun spawn by the police car before the power station
 add:
 {
@@ -1230,7 +1225,7 @@ add:
 ; --- Concrete bags before the walkway
 {
 	"classname" "prop_dynamic"
-	"origin" "-2294 3298 296"
+	"origin" "-2285 3342 296"
 	"angles" "0 90 0"
 	"model" "models/props/de_prodigy/concretebags.mdl"
 	"solid" "6"
@@ -1341,8 +1336,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1368,43 +1363,43 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips around the saferoom / construction site
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip08,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip09,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip05,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayf,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayg,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayc,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wwblocker,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwaye,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayd,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip08,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip09,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip05,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayf,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayg,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayc,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wwblocker,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwaye,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_constructsite_wrongwayd,Kill,,30,-1"
 	; --- Clips around the power station
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip06,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip07,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_funcinfclip1,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_funcinfclip2,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_funcinfclip3,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway1,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway2,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway3,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway4,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway5,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway6,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway7,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway8,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip06,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip07,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_funcinfclip1,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_funcinfclip2,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_funcinfclip3,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway1,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway2,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway3,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway4,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway5,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway6,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway7,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wrongway8,Kill,,30,-1"
 	; --- Wall covering the power station fences
-	"OnMapSpawn" "anv_mapfixes_yeswayfence_wall,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence1st_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_yeswayfence2nd_clip,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence_wall,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence1st_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayfence2nd_clip,Kill,,30,-1"
 	; --- Hittable atomizer on the power station garage door, since the forklift cannot fully block it
-	"OnMapSpawn" "anv_mapfixes_atomizer_bsp_forkliftgate_trigmult,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_atomizer_bsp_forkliftgate_trigmult,Kill,,30,-1"
 	; --- Breakable crate in room by end saferoom
-	"OnMapSpawn" "anv_mapfixes_losblocker_closetcrate,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_losblocker_closetcrate,Kill,,30,-1"
 }
 ; --- Replace TLS clips on power station fence with survivor only clips
 {
