--- a/cfg/cfgogl/tailred/stripper/maps/c12m1_hilltop.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c12m1_hilltop.cfg
@@ -22,11 +22,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -280,8 +275,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -319,22 +314,22 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clip behind starting saferoom
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip00,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip00,Kill,,30,-1"
 	; --- Clips between cliff before bridge
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_stuckspot,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_stuckspot,Kill,,30,-1"
 	; --- Clips behind rocks by trailer
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip05,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_slidespot,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip05,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_slidespot,Kill,,30,-1"
 	; --- Clips on roofs in train depot
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip06,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip06,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
 	; --- Clips above the end saferoom
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip07,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip08,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip09,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip07,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip08,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip09,Kill,,30,-1"
 }
 
 ; =====================================================
