--- a/cfg/cfgogl/tailred/stripper/maps/c12m5_cornfield.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c12m5_cornfield.cfg
@@ -22,11 +22,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -122,6 +117,7 @@ add:
 	"massScale" "108" ; --- L4D1 model's mass: 1295, L4D2 model's mass: 12
 	"BreakableType" "2"
 	"fadescale" "0"
+	"BreakableType" "2"
 }
 ; --- Hittable hay bales by the escape gate (next to the added army truck)
 {
@@ -496,8 +492,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -523,27 +519,27 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips by the saferoom
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip11,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip10,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_pouncersonly_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_pouncersonly_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_pouncersonly_wrongwayb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_pouncersonly_wrongwayc,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip11,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip10,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_pouncersonly_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_pouncersonly_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_pouncersonly_wrongwayb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_pouncersonly_wrongwayc,Kill,,30,-1"
 	; --- Clips by the one way drop
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip09,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_permstuck,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_onewaydrophill_clip,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip09,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_permstuck,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_onewaydrophill_clip,Kill,,30,-1"
 	; --- Clips around the finale area
-	"OnMapSpawn" "anv_mapfixes_wrongway_clipa,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_wrongway_clipb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_wrongway_propa,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_wrongway_propb,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_wrongway_propc,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip05,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip06,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_wrongway_clipa,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_wrongway_clipb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_wrongway_propa,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_wrongway_propb,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_wrongway_propc,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip05,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip06,Kill,,30,-1"
 }
 
 ; =====================================================
