--- a/cfg/cfgogl/tailred/stripper/maps/c13m2_southpinestream.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c13m2_southpinestream.cfg
@@ -27,6 +27,12 @@ filter:
 {
 	"targetname" "quake_trigger"
 }
+{
+	"targetname" "rock1"
+}
+{
+	"targetname" "tree1"
+}
 ; --- Enable motion on hittable rock and make start in a more consistent location
 modify:
 {
@@ -55,6 +61,7 @@ modify:
 	{
 		"OnDamaged" "director,BeginScript,event_alarme,8,1"
 	}
+}
 ; --- Prevent the event explosion from damaging players
 {
 	match:
@@ -101,11 +108,6 @@ modify:
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
-; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
 ; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
@@ -371,8 +373,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -416,7 +418,7 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clip on fence before the event - REPLACED
-	"OnMapSpawn" "anv_mapfixes_surfsup,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_surfsup,Kill,,30,-1"
 }
 
 ; =====================================================
