--- a/cfg/cfgogl/tailred/stripper/maps/c14m1_junkyard.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c14m1_junkyard.cfg
@@ -35,7 +35,7 @@ modify:
 ; --- Once the crane is fully lifted and it starts rotating `c14_junkyard_cooldown.nut` is called
 ; --- When the button to release the container is pressed, `c14m1_mob.nut` is called and the event ends
 
-; --- Reduce size of mobs when generator are started
+; --- Remove horde while crane is lifting the container
 modify:
 {
 	match:
@@ -44,25 +44,23 @@ modify:
 	}
 	delete:
 	{
-		"OnCase01" "directorRunScriptFilec14m1_mob1-1"
-		"OnCase02" "directorRunScriptFilec14m1_mob1-1"
-		"OnCase03" "directorRunScriptFilec14m1_mob1-1"
+		"OnCase04" "directorBeginScriptc14_junkyard_crane3-1"
 	}
-	insert:
+}
+; --- Remove panic event when starting event
+{
+	match:
 	{
-		"OnCase01" "director,RunScriptFile,c14m1_mob_rework,1,-1"
-		"OnCase02" "director,RunScriptFile,c14m1_mob_rework,1,-1"
-		"OnCase03" "director,RunScriptFile,c14m1_mob_rework,1,-1"
+		"targetname" "fuel_button"
+	}
+	delete:
+	{
+		"OnPressed" "directorForcePanicEvent2-1"
 	}
 }
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
-; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
 ; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
@@ -181,8 +179,8 @@ add:
 ; =====================================================
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
