--- a/cfg/cfgogl/tailred/stripper/maps/c1m3_mall.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c1m3_mall.cfg
@@ -206,11 +206,6 @@ filter:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -264,8 +259,8 @@ add:
 ; --- Ammo pile by the gun spawn after the 2nd set of escalators
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "3580 -2661 -64"
-	"angles" "0 0 0"
+	"origin" "3578 -2683 -64"
+	"angles" "0 90 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -557,19 +552,22 @@ add:
 ; --- Fence cover props in front of the escalators on the far side in the second escalator room
 {
 	"classname" "prop_dynamic"
-	"origin" "3573 -2693 280"
-	"angles" "0 219 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
+	"origin" "3598 -2691 280"
+	"angles" "0 39 0"
+	"model" "models/props_mall/mall_display_07.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "3522 -2638 280"
-	"angles" "0 249 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "3598 -2691 428"
+	"angles" "0 39 0"
+	"mins" "-18 -48 -60"
+	"maxs" "18 48 60"
+	"boxmins" "-18 -48 -60"
+	"boxmaxs" "18 48 60"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 ; --- Fence cover prop in the dark area in the second escalator room
 {
@@ -611,23 +609,6 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Fence cover props on the left after going down second set of escalators
-{
-	"classname" "prop_dynamic"
-	"origin" "3452 -2897.5 1"
-	"angles" "0 84 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3372 -2907 1"
-	"angles" "0 94 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
 ; --- Fence cover prop in front after going down second set of escalators
 {
 	"classname" "prop_dynamic"
@@ -647,49 +628,6 @@ add:
 	"boxmaxs" "18 48 60"
 	"initialstate" "1"
 	"BlockType" "1"
-}
-; --- Fence cover props around the corner after the second set of escalators
-{
-	"classname" "prop_dynamic"
-	"origin" "2554 -1927 1"
-	"angles" "0 9 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2544 -1842 1"
-	"angles" "0 354 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- Fence cover prop under the third set of escalators before the event path
-{
-	"classname" "prop_dynamic"
-	"origin" "2611 -663 1"
-	"angles" "0 189 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- Fence cover props in the back corner after going up the third set of escalators before the event path
-{
-	"classname" "prop_dynamic"
-	"origin" "2528 204 282"
-	"angles" "0 204 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2679 75 282"
-	"angles" "0 249 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
 }
 ; --- Fence cover prop to the left of the drop leading to the event path
 {
@@ -837,22 +775,6 @@ add:
 ; --- Fence cover props at the entrance of the final area after the event
 {
 	"classname" "prop_dynamic"
-	"origin" "-407 -4493 282"
-	"angles" "0 112 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-473 -4523 282"
-	"angles" "0 120 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
 	"origin" "-91 -4425 280"
 	"angles" "0 67.5 0"
 	"model" "models/props_mall/mall_display_07.mdl"
@@ -948,8 +870,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
