--- a/cfg/cfgogl/tailred/stripper/maps/c2m1_highway.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c2m1_highway.cfg
@@ -33,11 +33,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -189,6 +184,15 @@ modify:
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
 add:
+; --- Hittable dumpster outside the saferoom
+{
+	"classname" "prop_physics"
+	"origin" "7775 8219 -596"
+	"angles" "0 80 0"
+	"model" "models/props_junk/dumpster_2.mdl"
+	"solid" "6"
+	"fadescale" "0"
+}
 ; --- Add a hittable alarm car on the highway before the drop
 ; --- Car models
 {
@@ -578,6 +582,25 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Solidify shrubs by the saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "8224 8400 -638"
+	"angles" "0 0 0"
+	"model" "models/props_foliage/swamp_shrubwall_block_512_deep.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "7625.64 8495.72 -670.324"
+	"angles" "0 309.5 0"
+	"model" "models/props_foliage/swamp_shrubwall_256_deep.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
 ; --- Make the door for the smoker pull down at the billboard start open
 modify:
 {
@@ -734,12 +757,100 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Billboard to show where skybox blocks off the motel roof by the drop
+; --- Fences to show where skybox blocks off the motel roof
 {
 	"classname" "prop_dynamic"
-	"origin" "2786 3258 -515"
+	"origin" "2779 3203 -646"
 	"angles" "0 0 0"
-	"model" "models/props_rooftop/billboard03.mdl"
+	"model" "models/props_urban/fence001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2779 3319 -646"
+	"angles" "0 0 0"
+	"model" "models/props_urban/fence001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2651 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2403 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2155 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1907 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1659 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1411 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1163 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "946 3287 -645"
+	"angles" "0 135 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "833 3174 -645"
+	"angles" "0 135 0"
+	"model" "models/props_urban/fence001_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "810 3151 -645"
+	"angles" "0 135 0"
+	"model" "models/props_urban/fence_post001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -798,12 +909,17 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "10808 8336 -102"
-	"angles" "0 27 0"
-	"mins" "-36.5 -67 -358"
-	"maxs" "36.5 67 358"
-	"boxmins" "-36.5 -67 -358"
-	"boxmaxs" "36.5 67 358"
+	"origin" "10786 8369 -102"
+	"mins" "-37 -25 -358"
+	"maxs" "37 25 358"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "10794 8307 -102"
+	"mins" "-29 -37 -358"
+	"maxs" "29 37 358"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -1104,6 +1220,47 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Boards to assist with crossing around the skybox on the motel roof
+{
+	"classname" "prop_dynamic"
+	"origin" "2807 3130 -647"
+	"angles" "0 270 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2807 3118 -647"
+	"angles" "0 90 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2910 3130 -646.9"
+	"angles" "0 270 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2910 3118 -646.9"
+	"angles" "0 90 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "2858.5 3124 -647"
+	"mins" "-115.5 -12 -1"
+	"maxs" "115.5 12 1.15"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Shrub on island before the final hill
 {
 	"classname" "prop_dynamic"
@@ -1136,7 +1293,7 @@ add:
 	"classname" "prop_dynamic"
 	"origin" "-1404 -2450 -1089"
 	"angles" "0 296.5 0"
-	"model" "models/props_vehicles/bus01_2.mdl"
+	"model" "models/props_waterfront/tour_bus.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -1260,6 +1417,23 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Highway barrels by the end saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "-378 -1899 -1056"
+	"angles" "0 0 0"
+	"model" "models/props_urban/highway_barrel001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-506 -1899 -1056"
+	"angles" "0 0 0"
+	"model" "models/props_urban/highway_barrel001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Concrete blocks and ramps on the end saferoom roof
 {
 	"classname" "prop_dynamic"
@@ -1268,6 +1442,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1276,6 +1451,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1284,6 +1460,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1292,6 +1469,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1317,10 +1495,15 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+{
+	"classname" "info_target"
+	"origin" "-907 -2330 -994"
+	"targetname" "saferoom_concrete"
+}
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1346,9 +1529,9 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clip on motel roof before drop
-	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_clipinfected,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_wrongwayf,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_clipinfected,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_wrongwayf,Kill,,30,-1"
 }
 
 ; =====================================================
@@ -1461,15 +1644,6 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_rooftop/gutter_pipe_256.mdl"
 	"solid" "0"
-	"disableshadows" "1"
-}
-; --- Assist with crossing around skybox
-{
-	"classname" "prop_dynamic"
-	"origin" "2853 3153 -638"
-	"angles" "0 0 0"
-	"model" "models/props_street/awning_long_limitedcollision.mdl"
-	"solid" "6"
 	"disableshadows" "1"
 }
 ; --- Infected ladder to stop players getting stuck behind debris after the drop
