--- a/cfg/cfgogl/tailred/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c2m3_coaster.cfg
@@ -40,11 +40,6 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -1034,28 +1029,10 @@ add:
 ; ==                      PROPS                      ==
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
-add:
-; --- Physics prop trash bins by the saferoom for some extra, but preventable, spawns
-{
-	"classname" "prop_physics"
-	"origin" "2654 2261 -8"
-	"angles" "0 270 0"
-	"model" "models/props_street/trashbin01.mdl"
-	"solid" "6"
-	"spawnflags" "8"
-}
-{
-	"classname" "prop_physics"
-	"origin" "2686 2263 12"
-	"angles" "0 270 0"
-	"model" "models/props_junk/trashbin01a.mdl"
-	"solid" "6"
-	"spawnflags" "8"
-}
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1100,7 +1077,7 @@ modify:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 ; --- Re-add Valve's blockers copied directly from c2m3_coaster_commentary.txt, excluding the ones we don't want
 ; --- Block climbing coaster to skip starting the event
@@ -1396,36 +1373,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 	"skin" "1"
-}
-; --- Fix the line post placements
-; --- For some unknown reason, they are impossible to change individually without removing all of them - this code does not work
-modify:
-{
-	match:
-	{
-		"hammerid" "556668"
-	}
-	replace:
-	{
-		"origin" "4424 2104 -64"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "556664"
-	}
-	replace:
-	{
-		"origin" "4424 2000 -64"
-	}
-}
-filter:
-{
-	"hammerid" "556684"
-}
-{
-	"hammerid" "556621"
 }
 
 ; =====================================================
