--- a/cfg/cfgogl/tailred/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c3m1_plankcountry.cfg
@@ -22,11 +22,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -75,6 +70,26 @@ add:
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
 add:
+; --- Hittable car in the open area on the left after the ferry
+{
+	"classname" "prop_physics"
+	"origin" "-3605 8503 5"
+	"angles" "0 30 0"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked.mdl"
+	"solid" "6"
+	"fadescale" "0"
+	"rendercolor" "91 109 67"
+	"targetname" "hittable_car_post_ferry_green"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-3605 8503 5"
+	"angles" "0 30 0"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked_glass.mdl"
+	"solid" "6"
+	"fadescale" "0"
+	"parentname" "hittable_car_post_ferry_green"
+}
 ; --- Dumpster by the ladder near the upper house after the ferry
 {
 	"classname" "prop_physics"
@@ -1138,8 +1153,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1165,15 +1180,15 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Axis warp behind saferoom
-	"OnMapSpawn" "anv_mapfixes_axiswarp_startspawn_trigmult,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_startspawn_trigmult,Kill,,30,-1"
 	; --- Clip in back corner of area after ferry
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,30,-1"
 	; --- Clips above end saferoom
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_endsaferoom_wrongwaya,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_endsaferoom_wrongwayb,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip04,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_endsaferoom_wrongwaya,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_endsaferoom_wrongwayb,Kill,,30,-1"
 }
 
 ; =====================================================
