--- a/cfg/cfgogl/tailred/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c4m1_milltown_a.cfg
@@ -107,8 +107,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Make the weapons before the diner single pickup to get survivors to go in the diner
 filter:
@@ -159,19 +159,10 @@ modify:
 		"weapon_selection" "weapon_shotgun_chrome"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 ; --- Remove health cabinets
 filter:
 {
 	"classname" "prop_health_cabinet"
-}
-; --- Remove HR in treehouse
-{
-	"hammerid" "1751993"
 }
 ; --- Make guns in house by sugarmill saferoom always spawn both T1 types
 modify:
@@ -774,6 +765,18 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Block LOS under fence by the ladder before the playground
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,mins -192 -1 -3,0,-1"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,maxs 192 1 3,0,-1"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-3104 7385 98"
+	"targetname" "losfix_ladder_fence"
+}
 ; --- Clipping on balcony railing by the playground
 {
 	"classname" "env_physics_blocker"
@@ -1133,7 +1136,7 @@ add:
 	"origin" "3395 -856 110"
 	"targetname" "losfix_blue_pickup_b"
 }
-; --- Boxes in the boat garage by the sugarmill saferoom
+; --- Washer boxes at house by the sugarmill saferoom
 {
 	"classname" "prop_dynamic"
 	"origin" "3858 -810 97"
@@ -1144,16 +1147,16 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3858 -767 97"
-	"angles" "1 270 -2"
+	"origin" "3550 -471 96"
+	"angles" "0 270 0"
 	"model" "models/props/cs_assault/washer_box.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1179,11 +1182,11 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Replace broken blocker on generator by burger tank causing physics issues
-	"OnMapSpawn" "anv_mapfixes_booster_ginnyjon,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_booster_ginnyjon,Kill,,30,-1"
 	; --- Angled clip on top of generator (can be re-enabled if angled blockers get fixed) (#34), replaced with existing Valve commentary blocker
-	"OnMapSpawn" "anv_mapfixes_booster_ginnytop,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_booster_ginnytop,Kill,,30,-1"
 	; --- Replace blocker on fence by garage sale
-	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,30,-1"
 }
 ; --- Replacement for anv_mapfixes_booster_ginnyjon
 {
@@ -1212,7 +1215,7 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 ; --- Re-add Valve's blockers copied directly from c4m1_milltown_a_commentary.txt, excluding the ones we don't want
 ; --- Block jesus spot on table in the burger tank - REMOVED, nav fixes vscript fixes jesus spot here, so no need to replace this
@@ -1680,6 +1683,39 @@ add:
 	"model" "models/props_vehicles/suv_2001_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-937 6123 156"
+	"angles" "0 -14 0"
+	"mins" "-12 -33 -5"
+	"maxs" "12 33 5"
+	"boxmins" "-12 -33 -5"
+	"boxmaxs" "12 33 5"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-929 6121 166"
+	"angles" "0 -14 0"
+	"mins" "-12 -31 -5"
+	"maxs" "12 31 5"
+	"boxmins" "-12 -31 -5"
+	"boxmaxs" "12 31 5"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-916 6118 174"
+	"angles" "0 -14 0"
+	"mins" "-12 -29 -3"
+	"maxs" "12 29 3"
+	"boxmins" "-12 -29 -3"
+	"boxmaxs" "12 29 3"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 ; --- Block the door between the 2 new fences
 {
