--- a/cfg/cfgogl/tailred/stripper/maps/c4m2_sugarmill_a.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c4m2_sugarmill_a.cfg
@@ -47,11 +47,6 @@ filter:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -199,6 +194,26 @@ filter:
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
 add:
+; --- Ammo pile in the trailer near the start of the mill
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "1113 -4256 139"
+	"angles" "0 315 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+}
+; --- Ammo pile in the locker room
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "1566 -6111 104"
+	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+}
 ; --- Ammo pile in shack by elevator
 {
 	"classname" "weapon_ammo_spawn"
@@ -208,7 +223,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
-	"count" "5"
 }
 
 ; =====================================================
@@ -844,6 +858,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Clipping on door of small shack before the ramp
+{
+	"classname" "env_physics_blocker"
+	"origin" "3600 -5880 100"
+	"mins" "-4 -40 -6"
+	"maxs" "4 40 6"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Clipping on return point for ramp drop between the 2 silo sections to stop players getting stuck
 {
 	"classname" "env_physics_blocker"
@@ -1180,7 +1203,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Props to block scratching survivors through the elevator and help with spawning
+; --- Metal plates on the outside of the elevator to block scratching and help with spawns
 {
 	"classname" "prop_dynamic"
 	"origin" "-1453 -9608.1 684"
@@ -1266,9 +1289,40 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
+add:
+; --- Railings in the elevator to stand on
+{
+	"classname" "prop_dynamic"
+	"origin" "-1525 -9568 139"
+	"angles" "0 90 0"
+	"model" "models/props_mill/mill_railing_36.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"parentname" "elevator"
+	"rendercolor" "219 204 23"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1525 -9528 139"
+	"angles" "0 90 0"
+	"model" "models/props_mill/mill_railing_36.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"parentname" "elevator"
+	"rendercolor" "219 204 23"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1525 -9548 160"
+	"mins" "-1 -37 -22"
+	"maxs" "1 37 22"
+	"initialstate" "1"
+	"BlockType" "0"
+	"parentname" "elevator"
+}
 
 
 ; ############  MAP SOUND AND GFX CHANGES  ############
@@ -1292,7 +1346,7 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 add:
 ; --- Re-add Valve's blockers copied directly from c4m2_sugarmill_a_commentary.txt, excluding the ones we don't want
