--- a/cfg/cfgogl/tailred/stripper/maps/c5m1_waterfront.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c5m1_waterfront.cfg
@@ -32,11 +32,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -486,8 +481,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -522,7 +517,7 @@ filter:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 ; --- Re-add Valve's blockers copied directly from c5m1_waterfront_commentary.txt, excluding the ones we don't want
 ; --- Block survivors from jumping over a wall near the start to get on the kitchen
