--- a/cfg/cfgogl/tailred/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c5m3_cemetery.cfg
@@ -40,11 +40,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -759,37 +754,22 @@ add:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
-; --- Highway sign on the bridge at the start
+; --- Highway barrels on the bridge at the start
 {
 	"classname" "prop_dynamic"
-	"origin" "5133 7235 -9"
-	"angles" "0 270 0"
-	"model" "models/props_highway/highway_sign_post002.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"lightingorigin" "highway_sign_lighting"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5146 7217 287"
-	"angles" "0 270 0"
-	"model" "models/props_highway/highway_sign001.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5284 7277 260"
+	"origin" "5284 7224 257"
 	"angles" "0 0 0"
 	"model" "models/props_urban/highway_barrel001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Fix lighting
 {
-	"classname" "info_target"
-	"origin" "5146 7217 287"
-	"targetname" "highway_sign_lighting"
+	"classname" "prop_dynamic"
+	"origin" "5124 7224 257"
+	"angles" "0 0 0"
+	"model" "models/props_urban/highway_barrel001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 ; --- Tree behind a fence in the open area at the start
 {
@@ -992,26 +972,26 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 add:
-; --- Guard rails around the sewer ladder
+; --- Pipe to stand on at the ladder in the sewer
 {
 	"classname" "prop_dynamic"
-	"origin" "5895 377 20"
-	"angles" "0 180 0"
-	"model" "models/props_c17/handrail04_medium.mdl"
+	"origin" "5952 403 -99"
+	"angles" "0 0 -90"
+	"model" "models/props_pipes/pipeset08d_256_001a.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "5977 406 0"
-	"angles" "0 180 0"
-	"model" "models/props_c17/handrail04_corner.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "5945 405 -48"
+	"mins" "-17 -3 -48"
+	"maxs" "17 3 48"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 
 
