--- a/cfg/cfgogl/tailred/stripper/maps/c6m1_riverbank.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c6m1_riverbank.cfg
@@ -106,11 +106,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -578,23 +573,32 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block survivors from skipping over the truck / bus outside saferoom
+; --- Block survivors from skipping over the truck / bus outside saferoom  (can be re-enabled if angled blockers get fixed) (#34)
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "1832 2718 1592"
+;	"mins" "-47 -53 -1504"
+;	"maxs" "47 53 1504"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "2033 2956 1668"
+;	"angles" "0 -143.066 0"
+;	"mins" "-236 -52 -1428"
+;	"maxs" "236 52 1428"
+;	"boxmins" "-236 -52 -1428"
+;	"boxmaxs" "236 52 1428"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
+; --- Replacement clip on truck
 {
 	"classname" "env_physics_blocker"
-	"origin" "1832 2718 1592"
-	"mins" "-47 -53 -1504"
-	"maxs" "47 53 1504"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "2033 2956 1668"
-	"angles" "0 -143.066 0"
-	"mins" "-236 -52 -1428"
-	"maxs" "236 52 1428"
-	"boxmins" "-236 -52 -1428"
-	"boxmaxs" "236 52 1428"
+	"origin" "1827 2718 159"
+	"mins" "-51 -53 -71"
+	"maxs" "51 53 71"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -986,8 +990,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
@@ -1055,13 +1059,13 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Clips above end saferoom roof
-	"OnMapSpawn" "anv_mapfixes_endsaferoof_wrongway_clip,Kill,,15,-1"
-	"OnMapSpawn" "anv_mapfixes_semiperm_endsaferoof,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_endsaferoof_wrongway_clip,Kill,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_semiperm_endsaferoof,Kill,,30,-1"
 }
 ; --- Remove Valve's commentary blockers so we can replace them with our own
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+	"OnMapSpawn" "env_player_blocker,Kill,,30,-1"
 }
 ; --- Re-add Valve's blockers copied directly from c6m1_riverbank_commentary.txt, excluding the ones we don't want
 ; --- Block survivors from jumping onto the awning by the store
