--- a/cfg/cfgogl/tailred/stripper/maps/c6m3_port.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c6m3_port.cfg
@@ -26,8 +26,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Ensure both T1 guns spawn in the saferoom
 modify:
@@ -51,11 +51,6 @@ modify:
 		"weapon_selection" "any_smg"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 ; --- Fix finale pills disappearing (confoglcompmod issue)
 filter:
 {
@@ -192,8 +187,8 @@ add:
 ; =====================================================
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
