--- a/cfg/cfgogl/tailred/stripper/maps/c7m2_barge.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c7m2_barge.cfg
@@ -67,11 +67,6 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -273,8 +268,8 @@ add:
 ; =====================================================
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
