--- a/cfg/cfgogl/tailred/stripper/maps/c8m5_rooftop.cfg
+++ b/cfg/cfgogl/tailred/stripper/maps/c8m5_rooftop.cfg
@@ -23,11 +23,6 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -109,20 +104,11 @@ filter:
 ; ==                      PROPS                      ==
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
-add:
-; --- Additional railing on the ladder choke to reduce deaths
-{
-	"classname" "prop_dynamic"
-	"origin" "7487 8960 6226"
-	"angles" "0 270 0"
-	"model" "models/props_c17/handrail04_long.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
+
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 add:
 ; --- Prevent fall damage at the ladder choke
@@ -141,6 +127,15 @@ add:
 	"filtername" "filter_survivor"
 	"spawnflags" "1"
 	"OnStartTouch" "!activator,IgnoreFallDamageWithoutReset,1,0,-1"
+}
+; --- Additional railing on the ladder choke rooftop to reduce deaths
+{
+	"classname" "prop_dynamic"
+	"origin" "7487 8960 6226"
+	"angles" "0 270 0"
+	"model" "models/props_c17/handrail04_long.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 
 
@@ -191,7 +186,7 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Ladder in saferoom
-	"OnMapSpawn" "anv_mapfixes_ladder_saferoomlulz_cloned_rooftopmain,Kill,,15,-1"
+	"OnMapSpawn" "anv_mapfixes_ladder_saferoomlulz_cloned_rooftopmain,Kill,,30,-1"
 }
 
 ; =====================================================
